Day 1: Image Manipulation using CSS Filters

--- a/index.html
+++ b/index.html
@@ -1,3 +1,117 @@
-git remote add origin https://github.com/Harsh7880/CSS-in-30-days.git
-git branch -M main
-git push -u origin main
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title>Image Manipulation | Code 30 Things in 30 Days with CSS3</title>
+
+    <link rel="stylesheet" href="style.css" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1 class="center"><small>Day #1</small> Image Manipulation</h1>
+
+    <div class="container">
+      <div class="final-result">
+        <h2>Original Image <small>Use this for reference!</small></h2>
+        <div class="content">
+          <section>
+            <h4>Example #1 Grayscale</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1074"
+              alt=""
+              class="final__grayscale"
+            />
+          </section>
+
+          <section>
+            <h4>Example #2 Blur</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1055"
+              alt=""
+              class="final__blur"
+            />
+          </section>
+
+          <section>
+            <h4>Example #3 invert</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1000"
+              alt=""
+              class="final__invert"
+            />
+          </section>
+
+          <section>
+            <h4>Example #4 Sepia</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1023"
+              alt=""
+              class="final__sepia"
+            />
+          </section>
+        </div>
+      </div>
+      <div class="sandbox">
+        <h2>Sandbox <small>This is where you play</small></h2>
+
+        <div class="content">
+          <section>
+            <h4>Example #1 Grayscale (Hover to see the transition)</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1074"
+              alt=""
+              class="grayscale"
+            />
+          </section>
+
+          <section>
+            <h4>Example #2 Blue (Hover to see the transition)</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1055"
+              alt=""
+              class="blur"
+            />
+          </section>
+
+          <section>
+            <h4>Example #3 Invert (Hover to see the transition)</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1000"
+              alt=""
+              class="invert"
+            />
+          </section>
+
+          <section>
+            <h4>Example #4 Sepia (Hover to see the transition)</h4>
+
+            <img
+              src="https://unsplash.it/500/300?image=1023"
+              alt=""
+              class="sepia"
+            />
+          </section>
+        </div>
+      </div>
+    </div>
+    <footer class="center">
+    
+      <div class="made-by">
+        Made by <a href="http://bradhussey.ca/">Harsh Kumar</a>
+      </div>
+     
+   
+    </footer>
+  </body>
+</html>
